--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -16,7 +16,7 @@ sudo apt install -y \
     zsh \
     pipx
 
-if [ -d $HOME/.pyenv ]; then
+if [ ! -d $HOME/.pyenv ]; then
     curl https://pyenv.run | bash
 fi
 
