--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -8,7 +8,8 @@ brew install \
     pipx \
     pyenv \
     nvim \
-    curl
+    curl \
+    zoxide
 
 if [ ! -d /Applications/kitty.app ]; then
     curl -L https://sw.kovidgoyal.net/kitty/installer.sh | sh /dev/stdin
@@ -20,7 +21,8 @@ sudo apt update
 sudo apt install -y \
     zsh \
     pipx \
-    curl
+    curl \
+    zoxide
 
 if [ ! -d $HOME/.pyenv ]; then
     curl https://pyenv.run | bash
