Began using rbw

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -7,4 +7,5 @@
     osid = {{ $osid | quote }}
 
 [scriptEnv]
-    BITWARDEN_HOST = "vaultwarden.aaronlinlockhart.com"
+    BITWARDEN_HOST = "https://vaultwarden.aaronlinlockhart.com/"
+    BITWARDEN_EMAIL = "aaronlinlockhart@gmail.com"
