--- a/private_dot_ssh/private_id_ed25519.tmpl
+++ b/private_dot_ssh/private_id_ed25519.tmpl
@@ -1,1 +1,1 @@
-{{ (bitwarden "item" "ssh:aaronlockhartdev@gmail.com").notes }}
+{{ (rbw "ssh:aaronlockhartdev@gmail.com" "--folder" "chezmoi").notes }}
